# MatrixDSP

./: .travis.yml  CMakeLists.txt  LICENSE
src/: ComplexVector.h  FftSetupManager.h  Matrix2d.h  Matrix2dIterator.h  RowColIterator.h  Timer.h  Vector.h  VectorMatrix.h  kissfft.h
test/: ComplexVectorTest.cpp  MatrixTest.cpp  VectorMatrixTest.cpp  VectorTest.cpp  coverage
